<resources>
	<string name="app_name">El Tata</string>
	<string name="action_settings">Settings</string>
	<string name="title_activity_detalles_reporte">DetallesReporteActivity</string>

	<!-- NavigationView Menu Items -->
	<string name="str_todos_reportes">Todos los Reportes</string>
	<string name="str_psicologicos">Psicológicos</string>
	<string name="str_nutriologicos">Nutrilógicos</string>
	<string name="str_geriatricos">Geriátricos</string>
	<string name="str_fisioterapeuticos">Fisioterápicos</string>

	<string name="log_out_item">Cerrar Sesión</string>
	<string name="configuracion_item">Configuración</string>
	<string name="title_activity_el_tata_main">El Tata</string>



	<string-array name="Planets">
		<item>Sun</item>
		<item>Mercury</item>
		<item>Venus</item>
		<item>Earth</item>
		<item>Mars</item>
		<item>Jupiter</item>
		<item>Saturn</item>
		<item>Uranus</item>
		<item>Neptune</item>
	</string-array>
</resources>
